docs: Documentação do recurso de Raffle com Swagger
